[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/norse/Norse-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://objects/collect.png" type="Texture" id=2]
[ext_resource path="res://ui/GameUI.gd" type="Script" id=3]
[ext_resource path="res://addons/jamcountdown/Roboto-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 4 )

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
full_heart_color = Color( 1, 0, 0, 1 )

[node name="StatusPanel" type="PanelContainer" parent="."]
margin_right = 14.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StatusPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 144.0
margin_bottom = 90.0

[node name="Name" type="Label" parent="StatusPanel/VBoxContainer"]
margin_right = 137.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "JÃ¶rmungandr"

[node name="HSeparator" type="HSeparator" parent="StatusPanel/VBoxContainer"]
margin_top = 35.0
margin_right = 137.0
margin_bottom = 39.0

[node name="HealthContainer" type="HBoxContainer" parent="StatusPanel/VBoxContainer"]
margin_top = 43.0
margin_right = 137.0
margin_bottom = 83.0
alignment = 1

[node name="ColorRect" type="ColorRect" parent="StatusPanel/VBoxContainer/HealthContainer"]
margin_left = 4.0
margin_right = 44.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
color = Color( 1, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="StatusPanel/VBoxContainer/HealthContainer"]
margin_left = 48.0
margin_right = 88.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
color = Color( 1, 0, 0, 1 )

[node name="ColorRect3" type="ColorRect" parent="StatusPanel/VBoxContainer/HealthContainer"]
margin_left = 92.0
margin_right = 132.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
color = Color( 1, 0, 0, 1 )

[node name="StarsPanel" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -99.0
margin_bottom = 54.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="StarsPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 92.0
margin_bottom = 47.0
size_flags_vertical = 4

[node name="StarImage" type="TextureRect" parent="StarsPanel/HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true

[node name="StarLabel" type="Label" parent="StarsPanel/HBoxContainer"]
margin_left = 44.0
margin_top = 4.0
margin_right = 75.0
margin_bottom = 35.0
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "x 0"
valign = 1

[node name="DeathText" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = -50.0
margin_right = 164.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DeathText"]
margin_left = 7.0
margin_top = 7.0
margin_right = 321.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="DeathText/VBoxContainer"]
margin_right = 314.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
text = "You have perished"
align = 1

[node name="Label2" type="Label" parent="DeathText/VBoxContainer"]
margin_top = 55.0
margin_right = 314.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 4 )
text = "Click to respawn"
align = 1
